# src/modules/cert/dto/create-cert.dto.ts
@@ -1,0 +1,4 @@
+import { OmitType } from '@nestjs/swagger';
+import { Cert } from '../entities/cert.entity';
+
+export class CreateCertDto extends OmitType(Cert, ['id'] as const) {}
